tests/baselines/reference/typeArgumentInferenceWithClassExpression3.errors.txt
tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression3.ts(5,31): error TS2339: Property 'length' does not exist on type '{}'.


==== tests/cases/conformance/es6/classExpressions/typeArgumentInferenceWithClassExpression3.ts (1 errors) ====
    function foo<T>(x = class { prop: T }): T {
        return undefined;
    }
    
    foo(class { prop = "hello" }).length;
                                  ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.